objects/Opportunity_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_in_Stage__c</fullName>
        <description>IF(AND(Opportunity__r.IsClosed = False, ISBLANK(Exit_Date__c), VALUE((TODAY() - DATEVALUE(Created- Created Date".Date)))</description>
        <formula>if(Stage_change__c=TRUE,


  if(isblank(Exit_DateTime__c),
      if( Opportunity__r.IsClosed = True,   0,
      now()-Enter_DateTime__c),  
  Exit_DateTime__c-Enter_DateTime__c)

,0)</formula>
        <inlineHelpText>If Exit Date is blank, then "Today - Created Date". If Exit Date is populated, then "Exit Date</inlineHelpText>
        <label>Days in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enter_DateTime__c</fullName>
        <label>Enter DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enter_Date__c</fullName>
        <label>Enter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_DateTime__c</fullName>
        <label>Exit DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MIlestone__c</fullName>
        <label>Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_History_Legacy_ID__c</fullName>
        <label>Opportunity History Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity History</relationshipLabel>
        <relationshipName>Opportunity_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage_History__c</fullName>
        <label>Stage History</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Days_Open__c</fullName>
        <formula>CreatedDate-Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity History</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Opportunity History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>